# rappi-ops-copilot

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: schema.sql
docs/: n8n-rappi-ops-copilot-design.md  rappi-ops-copilot-brand-prompts.md
dogfood-output/: api-export-check.json  chatbot-capability-verification-2026-06-16.md  custom-chat-webhook-response.json  live-deepseek-check.json  manual-export-check.csv  report.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChartKit.tsx  ExecutiveInsights.tsx  InsightReportCharts.tsx  N8nChat.tsx  WorkspaceTabs.tsx  insightTypes.ts
ops_copilot/: __init__.py  api.py  charting.py  data_loader.py  insights.py  latex_report.py  models.py  postgres_loader.py  query_engine.py  report_authoring.py  settings.py
scripts/: README.md  ingest_workbook.py  setup_n8n.py  smoke_test.py
tests/: test_contracts.py
workflows/: README.md  rappi_ops_automatic_insights.json  rappi_ops_chat_agent.json
